# cpsdk

./: .travis.yml  CMakeLists.txt
cpl/: CMakeLists.txt
cpl/include/: CMakeLists.txt  cpl.h  definitions.h
cpl/src/: CMakeLists.txt  cpl_impl.cpp
examples/: CMakeLists.txt
examples/basic_example/: CMakeLists.txt  basic_example.cpp
